[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts_Scenes/PhoneScenes/AppSlates/GameplayAppSlates/TextMessenger/ConversationAppSlate.gd" type="Script" id=1]

[node name="ConversationAppSlateControl" type="Control"]
anchor_bottom = 1.0
margin_right = 354.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HeaderControl" type="Control" parent="VBoxContainer"]
margin_right = 354.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="VBoxContainer/HeaderControl"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MockPartnerLabel" type="Label" parent="VBoxContainer/HeaderControl/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "TEXT TEXT TEXT TEXT TEXT TEXT TEXT"

[node name="TextControl" type="Control" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 354.0
margin_bottom = 564.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 8.0

[node name="TextVBoxContainer" type="VBoxContainer" parent="VBoxContainer/TextControl"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/TextControl/TextVBoxContainer"]
margin_right = 354.0
margin_bottom = 359.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 8.0

[node name="MessageVBoxContainer" type="VBoxContainer" parent="VBoxContainer/TextControl/TextVBoxContainer/ScrollContainer"]
margin_right = 354.0
margin_bottom = 359.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PromptControl" type="Control" parent="VBoxContainer/TextControl/TextVBoxContainer"]
margin_top = 363.0
margin_right = 354.0
margin_bottom = 498.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="FooterControl" type="Control" parent="VBoxContainer"]
margin_top = 568.0
margin_right = 354.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="Panel" type="Panel" parent="VBoxContainer/FooterControl"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
